--- a/e-commerce-site/index.html
+++ b/e-commerce-site/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>.world</title>
+    <title>Keeb</title>
   </head>
   <body>
     <div id="root"></div>
